--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOyMTrocdTHdifDvHtPxbst",
+      "authorship_tag": "ABX9TyM9CJyCTI49lyaWon+2l30t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "a42cf0f0-d11e-4604-c4f1-d63e113a5ad9",
+        "outputId": "057fa933-0327-44ef-e5f8-106a27d9b398",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "9be0fa15-6320-486d-b03f-866967cfca57",
+        "outputId": "d6e2926f-389e-492b-9e82-8e0abc13f2f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -205,7 +205,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "5387bc0b-a68a-4d87-86ea-4a03c5a98a91",
+        "outputId": "4be0a7f8-c261-4250-ac66-07b1ecc58c76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -275,7 +275,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "91cfa1e7-b68c-402d-a04c-628408f65657",
+        "outputId": "05959f34-ee38-45e3-8a78-d76cb47edb1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
@@ -385,7 +385,7 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "a14cd3f3-9aa2-4491-a3f2-f51d2b3f1c5b",
+        "outputId": "d021eddf-7710-45a0-95bd-8b3ceca06767",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -443,7 +443,7 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "411b3d47-2415-43db-9e01-84ffa21902ba",
+        "outputId": "1244b271-7fbd-401a-ae3b-be6fbf09200e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -617,7 +617,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "9e114720-ecd0-4bd3-a3cf-0c2beedc2862",
+        "outputId": "e81d4575-e544-49ed-b48d-59e1411b85e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +695,7 @@
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "ed424925-0df8-4d8b-8b25-5daa4372f7ab",
+        "outputId": "5462e13b-9c9a-46ad-990a-909de847a246",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -768,7 +768,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "f299dfbe-c52e-4406-eea5-8b15acbbdcf8",
+        "outputId": "48732e0f-ed81-46d6-88ac-65d752a7efc1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -928,7 +928,7 @@
       ],
       "metadata": {
         "id": "zfYuoj0oMnRG",
-        "outputId": "763256a4-b028-4eb3-9a36-8609600296da",
+        "outputId": "6d4d664c-f1cf-43cf-de82-418aff9cde2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -965,7 +965,7 @@
       ],
       "metadata": {
         "id": "_ooNCvYAM38u",
-        "outputId": "c3d25d02-085d-454d-8b2d-d97403b9ec4d",
+        "outputId": "c923dce2-9f37-4f24-f413-8584df449b87",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1015,7 +1015,7 @@
       ],
       "metadata": {
         "id": "uMJ1tByQ6Wff",
-        "outputId": "dd28b3a8-e0d8-4052-f9be-122c13841df0",
+        "outputId": "d65f7d80-8257-42a3-8600-a22b225878d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "P2NfuqRcITgD",
-        "outputId": "758b6701-070c-4976-cd77-c015427c93c8",
+        "outputId": "91c8991e-1b83-4dac-e766-22699931e003",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
@@ -1166,7 +1166,7 @@
       ],
       "metadata": {
         "id": "ITjKDaEHKhkv",
-        "outputId": "748aa796-9587-46d5-d5c2-e9c3a5bbdfe3",
+        "outputId": "182dcf33-4edd-46cf-f488-5ae9f546d140",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354
@@ -1239,7 +1239,7 @@
       ],
       "metadata": {
         "id": "E18489UJVkUp",
-        "outputId": "52219d79-24e2-451f-9cc1-29fb868c3984",
+        "outputId": "9a5e7df4-83e1-434b-9723-9b386c44e9d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
@@ -1407,7 +1407,7 @@
       ],
       "metadata": {
         "id": "JAfprdWuwNol",
-        "outputId": "4f32220a-f592-46b1-f90e-bab74b2fb4f8",
+        "outputId": "1155c7e3-7a48-4f5d-9c3f-3ca84699bc95",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1435,7 +1435,7 @@
       ],
       "metadata": {
         "id": "RuQh_OXtxb53",
-        "outputId": "ad29c7bb-e8d7-467d-acef-c0774039164c",
+        "outputId": "07450b63-b0f0-4c53-e170-f737cc82da60",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1503,7 +1503,7 @@
       ],
       "metadata": {
         "id": "-BK_YiuC01gv",
-        "outputId": "ddd25769-5847-4c45-d469-f5c3a721940f",
+        "outputId": "92a24b4e-c785-4f60-cd41-3953d04926ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1553,7 +1553,7 @@
       ],
       "metadata": {
         "id": "zxUDj3XK3UZt",
-        "outputId": "18f93ac7-fa72-4bd7-ad80-22511cd7375e",
+        "outputId": "815aaeeb-98e4-4a78-ed27-a2cbd6fa6e2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1600,7 +1600,7 @@
       ],
       "metadata": {
         "id": "IGcGvYj9p_dc",
-        "outputId": "f4b8f9e9-f052-4049-c21d-5af1cd033742",
+        "outputId": "91b80965-60f7-45eb-df25-71693cde0d95",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1638,7 +1638,7 @@
       ],
       "metadata": {
         "id": "f5MfJKTPqkFQ",
-        "outputId": "ca532945-d17a-4481-85a8-ac78ff159a44",
+        "outputId": "c312fd5d-df54-4e34-bc36-c088f8239022",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1744,7 +1744,7 @@
       ],
       "metadata": {
         "id": "hHXaJk54IjwX",
-        "outputId": "7651bfd2-dadf-4a66-905c-e553846493bd",
+        "outputId": "fc6c7975-679f-4ae4-e5c3-44d84590f855",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1802,7 +1802,7 @@
       ],
       "metadata": {
         "id": "CT6Lx1CnJBhD",
-        "outputId": "7c9f4717-6120-4f8b-be5a-b0c32983f989",
+        "outputId": "37d2bd00-1925-45b0-ddd3-a32cc2207324",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1885,7 +1885,7 @@
       ],
       "metadata": {
         "id": "nBr5j_4sEw9i",
-        "outputId": "9eb59784-df56-4f6c-8ee3-b0b6149396eb",
+        "outputId": "b97b306c-caff-4bb4-dba2-f14293230b21",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1924,7 +1924,7 @@
       ],
       "metadata": {
         "id": "AvAm04wjFONs",
-        "outputId": "f50b37dd-b3dc-48c3-bed8-86bec1e220b2",
+        "outputId": "35e2b50e-df49-4dac-9cc8-c879c78f9418",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1963,7 +1963,7 @@
       ],
       "metadata": {
         "id": "8iGiqblFF2Ra",
-        "outputId": "8f0ac52e-54b4-4933-b6ef-220b95a5330f",
+        "outputId": "7506b582-ee90-4f94-ce2a-0ce0f23c601f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2157,7 +2157,7 @@
       ],
       "metadata": {
         "id": "Nog_qUB8a_cj",
-        "outputId": "5dc73166-f8b3-4594-a4a0-51fa1d4fd5a1",
+        "outputId": "c01bf3d2-2425-40fb-ee55-718f1a737552",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2199,7 +2199,7 @@
       ],
       "metadata": {
         "id": "VncFC3PEbXGe",
-        "outputId": "03bc9a19-c7d7-4652-b873-8dfafa6f6fad",
+        "outputId": "d2e1253d-b744-4ebc-c801-d7ac9e31b060",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2229,9 +2229,142 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "We also need to make some small adjustments to the decoder."
+      ],
       "metadata": {
         "id": "TBMwFKgQeWda"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DecoderAttention(nn.Module):\n",
+        "\n",
+        "  def __init__(self, n_features, hidden_dim):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.hidden_dim = hidden_dim\n",
+        "    self.n_features = n_features\n",
+        "    self.hidden= None\n",
+        "    self.basic_rnn = nn.GRU(self.n_features, self.hidden_dim, batch_first=True)\n",
+        "\n",
+        "    # Sets attention module and adjusts input dimensions of the regression layer\n",
+        "    self.attention = Attention(self.hidden_dim)\n",
+        "    self.regression = nn.Linear(2 * self.hidden_dim, self.hidden_dim)\n",
+        "\n",
+        "  def init_hidden(self, hidden_seq):\n",
+        "    # the output of the encoder is N, L, H and init_keys expects batch-first as well\n",
+        "    self.attention.init_keys(hidden_seq)  # Sets the \"keys\" (and \"values\") for the attention module\n",
+        "    hidden_final = hidden_seq[:, -1:]\n",
+        "    self.hidden = hidden_final.permute(1, 0, 2)  # L, N, H\n",
+        "\n",
+        "  def forward(self, X, mask=None):\n",
+        "    # X is N, 1, F\n",
+        "    batch_first_output, self.hidden = self.basic_rnn(X, self.hidden)\n",
+        "\n",
+        "    query = batch_first_output[:, -1:]\n",
+        "    # Feeds the \"query\" to the attention mechanism and concatenates it to the context vector\n",
+        "    context = self.attention(query, mask=mask)\n",
+        "    concatenated = torch.cat([context, query], axis=-1)\n",
+        "    output = self.regression(concatenated)\n",
+        "\n",
+        "    # N, 1, F\n",
+        "    return output.view(-1, 1, self.n_features)"
+      ],
+      "metadata": {
+        "id": "ZR_1AIMyc3DW"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s go over a simple example, using the updated decoder and attention\n",
+        "classes."
+      ],
+      "metadata": {
+        "id": "KK0ZY-vCfVGl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "full_seq = (torch.tensor([[-1, -1], [-1, 1], [1, 1], [1, -1]]).float().view(1, 4, 2))\n",
+        "\n",
+        "source_seq = full_seq[:, :2]\n",
+        "target_seq = full_seq[:, 2:]"
+      ],
+      "metadata": {
+        "id": "GO5qszGufW61"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(21)\n",
+        "\n",
+        "encoder = Encoder(n_features=2, hidden_dim=2)\n",
+        "decoder = DecoderAttention(n_features=2, hidden_dim=2)\n",
+        "\n",
+        "# Generates hidden states (keys and values)\n",
+        "hidden_seq = encoder(source_seq)  # encoder output\n",
+        "decoder.init_hidden(hidden_seq)   # pass encoder output to decoder\n",
+        "\n",
+        "# Target sequence generation\n",
+        "inputs = source_seq[:, -1:]\n",
+        "target_len = 2\n",
+        "for i in range(target_len):\n",
+        "  output = decoder(inputs)\n",
+        "  print(f\"Output: {output}\")\n",
+        "  inputs = output"
+      ],
+      "metadata": {
+        "id": "Jq-O2l6CghKA",
+        "outputId": "6284dce3-42fb-4044-b92f-0a30bc2ff37f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Output: tensor([[[-0.3555, -0.1220]]], grad_fn=<ViewBackward0>)\n",
+            "Output: tensor([[[-0.2641, -0.2521]]], grad_fn=<ViewBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To actually train a model using teacher forcing, we need to\n",
+        "put these two (or three) classes together…"
+      ],
+      "metadata": {
+        "id": "xlfFNzHYhrFC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Encoder + Decoder + Attention"
+      ],
+      "metadata": {
+        "id": "_dC2EK5-hu22"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "DAgEtxgahxKG"
       }
     }
   ]
