--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9CJyCTI49lyaWon+2l30t",
+      "authorship_tag": "ABX9TyMv2qt0HR6iYJvZj+U98O3O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "057fa933-0327-44ef-e5f8-106a27d9b398",
+        "outputId": "1239c791-9e28-4dda-8590-7004e71ccd64",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "d6e2926f-389e-492b-9e82-8e0abc13f2f9",
+        "outputId": "00725f4b-9723-4e54-ca58-9f54e62d89b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -205,7 +205,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "4be0a7f8-c261-4250-ac66-07b1ecc58c76",
+        "outputId": "2dccb636-cd66-4fc8-b8d0-0c34c52cd992",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -275,7 +275,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "05959f34-ee38-45e3-8a78-d76cb47edb1d",
+        "outputId": "d08161f1-faed-4fe4-c7a3-266a95efa0fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
@@ -385,7 +385,7 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "d021eddf-7710-45a0-95bd-8b3ceca06767",
+        "outputId": "afacc381-e35e-4716-afdf-bd53ee09e488",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -443,7 +443,7 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "1244b271-7fbd-401a-ae3b-be6fbf09200e",
+        "outputId": "0150a171-d5a5-4cba-c4f7-8bb9ea05b26a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -617,7 +617,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "e81d4575-e544-49ed-b48d-59e1411b85e8",
+        "outputId": "75f3de04-c10a-4304-8287-88b1b8eb66c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +695,7 @@
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "5462e13b-9c9a-46ad-990a-909de847a246",
+        "outputId": "5b99c194-c5d5-4e8b-853e-847c15d81b1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -768,7 +768,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "48732e0f-ed81-46d6-88ac-65d752a7efc1",
+        "outputId": "03a60b25-a051-4bd7-c159-fc7c45eeddd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -928,7 +928,7 @@
       ],
       "metadata": {
         "id": "zfYuoj0oMnRG",
-        "outputId": "6d4d664c-f1cf-43cf-de82-418aff9cde2f",
+        "outputId": "e0a077e1-9974-42dc-8ef9-1de267439897",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -965,7 +965,7 @@
       ],
       "metadata": {
         "id": "_ooNCvYAM38u",
-        "outputId": "c923dce2-9f37-4f24-f413-8584df449b87",
+        "outputId": "27208b0e-5cd3-4229-d7c3-27267ae9ef57",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1015,7 +1015,7 @@
       ],
       "metadata": {
         "id": "uMJ1tByQ6Wff",
-        "outputId": "d65f7d80-8257-42a3-8600-a22b225878d2",
+        "outputId": "7e662c33-a7eb-4332-dfdf-1cdafa401158",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "P2NfuqRcITgD",
-        "outputId": "91c8991e-1b83-4dac-e766-22699931e003",
+        "outputId": "7b155a40-e1cf-4251-ea7d-85076865cbdf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
@@ -1166,7 +1166,7 @@
       ],
       "metadata": {
         "id": "ITjKDaEHKhkv",
-        "outputId": "182dcf33-4edd-46cf-f488-5ae9f546d140",
+        "outputId": "ceebd013-e3bb-4660-d28b-7e9986e45865",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354
@@ -1239,7 +1239,7 @@
       ],
       "metadata": {
         "id": "E18489UJVkUp",
-        "outputId": "9a5e7df4-83e1-434b-9723-9b386c44e9d3",
+        "outputId": "5936fe9b-eb82-419d-90d1-f71ad54e55fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
@@ -1407,7 +1407,7 @@
       ],
       "metadata": {
         "id": "JAfprdWuwNol",
-        "outputId": "1155c7e3-7a48-4f5d-9c3f-3ca84699bc95",
+        "outputId": "e075701b-20b3-4848-92d3-beb8d7b41c0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1435,7 +1435,7 @@
       ],
       "metadata": {
         "id": "RuQh_OXtxb53",
-        "outputId": "07450b63-b0f0-4c53-e170-f737cc82da60",
+        "outputId": "67cde11e-3fcb-4cb7-beff-558a9f8aa3f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1503,7 +1503,7 @@
       ],
       "metadata": {
         "id": "-BK_YiuC01gv",
-        "outputId": "92a24b4e-c785-4f60-cd41-3953d04926ff",
+        "outputId": "56693e05-dd41-40ec-85fd-606de1367c5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1553,7 +1553,7 @@
       ],
       "metadata": {
         "id": "zxUDj3XK3UZt",
-        "outputId": "815aaeeb-98e4-4a78-ed27-a2cbd6fa6e2c",
+        "outputId": "95ec2196-281b-4435-9e07-5f51db87d9db",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1600,7 +1600,7 @@
       ],
       "metadata": {
         "id": "IGcGvYj9p_dc",
-        "outputId": "91b80965-60f7-45eb-df25-71693cde0d95",
+        "outputId": "bbd3aba9-652b-4435-8c49-d4182ecec5d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1638,7 +1638,7 @@
       ],
       "metadata": {
         "id": "f5MfJKTPqkFQ",
-        "outputId": "c312fd5d-df54-4e34-bc36-c088f8239022",
+        "outputId": "2e5ecd4a-efdf-49c9-cb65-271f480eab92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1744,7 +1744,7 @@
       ],
       "metadata": {
         "id": "hHXaJk54IjwX",
-        "outputId": "fc6c7975-679f-4ae4-e5c3-44d84590f855",
+        "outputId": "cf5a835e-933d-4a5d-eabc-bf45e61de7f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1802,7 +1802,7 @@
       ],
       "metadata": {
         "id": "CT6Lx1CnJBhD",
-        "outputId": "37d2bd00-1925-45b0-ddd3-a32cc2207324",
+        "outputId": "b900d29a-2d94-4e13-c762-367b68ae0397",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1885,7 +1885,7 @@
       ],
       "metadata": {
         "id": "nBr5j_4sEw9i",
-        "outputId": "b97b306c-caff-4bb4-dba2-f14293230b21",
+        "outputId": "e06c95be-fc8b-426d-9ee4-3748fc4fdcc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1924,7 +1924,7 @@
       ],
       "metadata": {
         "id": "AvAm04wjFONs",
-        "outputId": "35e2b50e-df49-4dac-9cc8-c879c78f9418",
+        "outputId": "4ad8116e-adb1-41e3-c03d-ff6ea03a873d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1963,7 +1963,7 @@
       ],
       "metadata": {
         "id": "8iGiqblFF2Ra",
-        "outputId": "7506b582-ee90-4f94-ce2a-0ce0f23c601f",
+        "outputId": "23c6a663-2c72-4382-c379-25ed81037ed2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2157,7 +2157,7 @@
       ],
       "metadata": {
         "id": "Nog_qUB8a_cj",
-        "outputId": "c01bf3d2-2425-40fb-ee55-718f1a737552",
+        "outputId": "44f6cc50-3e9a-468a-fc51-401d8d71196a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2199,7 +2199,7 @@
       ],
       "metadata": {
         "id": "VncFC3PEbXGe",
-        "outputId": "d2e1253d-b744-4ebc-c801-d7ac9e31b060",
+        "outputId": "9ef32a33-a812-4d66-c319-f3dc09dc6e1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2324,7 +2324,7 @@
       ],
       "metadata": {
         "id": "Jq-O2l6CghKA",
-        "outputId": "6284dce3-42fb-4044-b92f-0a30bc2ff37f",
+        "outputId": "7fa8dab6-f1ff-4efa-d485-8a1207b410dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2362,9 +2362,108 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/encdec_attn.png?raw=1)\n",
+        "\n",
+        "The integration of encoder, decoder, and the attention mechanism, when applied\n",
+        "to our sequence-to-sequence problem.\n",
+        "\n",
+        "* First, the data points in the source sequence (in red) feed the encoder (in blue) and generate \"keys\" ($K$) and \"values\" ($V$) for the attention mechanism (in black).\n",
+        "* Next, each input of the decoder (in green) generates one \"query\" ($Q$) at a time to produce a context vector (in black).\n",
+        "* Finally, the context vector gets concatenated to the decoder’s current hidden state (in green) and transformed to predicted coordinates (in green) by the output layer (in green).\n",
+        "\n"
+      ],
       "metadata": {
         "id": "DAgEtxgahxKG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "encoder_decoder = EncoderDecoder(encoder, decoder, input_len=2, target_len=2, teacher_forcing_prob=0.0)\n",
+        "encoder_decoder(full_seq)"
+      ],
+      "metadata": {
+        "id": "aJUeVzeTsDKe",
+        "outputId": "e097c9ec-ba97-436f-ba11-c00253c634f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-0.3555, -0.1220],\n",
+              "         [-0.2641, -0.2521]]], grad_fn=<CopySlices>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To visualize attention scores, we need to store them first.\n",
+        "The easiest way to do so is to create a new class that inherits from `EncoderDecoder` and then override the `init_outputs()` and `store_outputs()` methods:"
+      ],
+      "metadata": {
+        "id": "3j8G95yVsrNm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class EncoderDecoderAttention(EncoderDecoder):\n",
+        "\n",
+        "  def __init__(self, encoder, decoder, input_len, target_len, teacher_forcing_prob=0.5):\n",
+        "    super().__init__(encoder, decoder, input_len, target_len, teacher_forcing_prob)\n",
+        "    self.alphas = None\n",
+        "\n",
+        "  def init_outputs(self, batch_size):\n",
+        "    # N, L (target), F\n",
+        "    self.outputs = torch.zeros(batch_size, self.target_len, self.encoder.n_features).to(device)\n",
+        "    # N, L (target), L (source)\n",
+        "    self.alphas = torch.zeros(batch_size, self.target_len, self.input_len).to(device)\n",
+        "\n",
+        "  def store_output(self, i, out):\n",
+        "    # Stores the output\n",
+        "    self.outputs[:, i:i+1, :] = out\n",
+        "    self.alphas[:, i:i+1, :] = self.decoder.attention.alphas"
+      ],
+      "metadata": {
+        "id": "dSyJ1VatsyIP"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**IMPORTANT**: Pay attention to the shape of the alphas attribute: $(N, L_{target}, L_{source})$. For each one out of `N` sequences in a mini-batch, there is a matrix, where each \"query\" ($Q$) coming from the target sequence (a row in this matrix) has as many attention scores as there are \"keys\" ($K$) in the source sequence (the columns in this matrix)."
+      ],
+      "metadata": {
+        "id": "6_QGe26hwGEx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Model Training"
+      ],
+      "metadata": {
+        "id": "bTmd_a9nv7da"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "9JBhTXbCv9TT"
       }
     }
   ]
